--- a/.gitmodules
+++ b/.gitmodules
@@ -61,3 +61,15 @@
 [submodule "vim/bundle/vim-nginx"]
 	path = vim/bundle/vim-nginx
 	url = git://github.com/clones/vim-nginx.git
+[submodule "vim/bundle/supertab"]
+	path = vim/bundle/supertab
+	url = git://github.com/ervandew/supertab.git
+[submodule "vim/bundle/vim-zoomwin"]
+	path = vim/bundle/vim-zoomwin
+	url = git://github.com/rphillips/vim-zoomwin.git
+[submodule "vim/bundle/command-t"]
+	path = vim/bundle/command-t
+	url = git://github.com/wincent/Command-T.git
+[submodule "vim/bundle/taglist"]
+	path = vim/bundle/taglist
+	url = git://github.com/esukram/taglist.vim.git
