--- a/.gitmodules
+++ b/.gitmodules
@@ -73,3 +73,6 @@
 [submodule "vim/bundle/taglist"]
 	path = vim/bundle/taglist
 	url = git://github.com/esukram/taglist.vim.git
+[submodule "vim/bundle/vim-slurper"]
+	path = vim/bundle/vim-slurper
+	url = git://github.com/alowe/vim-slurper.git
